Corrected pathways for script and style files

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Project 1</title>
+  <title>Project 1: Casa Cocktails</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="style.css" />
-  <script src="moment.js"></script>
+  <link rel="stylesheet" href="./assets/style.css" />
+  <script src="./assets/moment.js"></script>
   <script>
     moment().format();
   </script>
@@ -90,12 +90,12 @@
         </div>
         <div class="column is-2">
           <figure>
-            <button class="liquor"><img class="img1" src="assests/cropped_bottle.jpg" alt="Liquor Bottle"></button>
+            <button class="liquor"><img class="img1" src="assets/Images/cropped_bottle.jpg" alt="Liquor Bottle"></button>
           </figure>
         </div>
         <div class="column is-2">
           <figure>
-            <button class="mixer"><img class="img2" src="assests/mixer_bottle.jpg" alt="Mixer Bottle" /></button>
+            <button class="mixer"><img class="img2" src="assets/Images/mixer_bottle.jpg" alt="Mixer Bottle" /></button>
           </figure>
 
         </div>
@@ -123,8 +123,8 @@
         <ul class="theMakeables">
           <div id="noDrink">
             <p>Sorry, we don't know of any drinks that can be made with what you've got...</p><iframe
-              src="https://giphy.com/embed/3oz8xrecHJXx85kgKI" id="idk" frameBorder="0"
-              class="giphy-embed" allowFullScreen></iframe>
+              src="https://giphy.com/embed/3oz8xrecHJXx85kgKI" id="idk" frameBorder="0" class="giphy-embed"
+              allowFullScreen></iframe>
             <p><a href="https://giphy.com/gifs/red-fang-3oz8xrecHJXx85kgKI">via GIPHY</a></p>
           </div>
         </ul>
@@ -173,7 +173,7 @@
       </div>
     </div>
   </section>
-  <script src="script.js"></script>
+  <script src="./assets/script.js"></script>
 </body>
 
 </html>
